--- a/index.html
+++ b/index.html
@@ -65,5 +65,6 @@ setTimeout(adUp,2000);
 </div>
 <div id="ad"><p class="ad">螳螂捕蝉，黄雀在后</p><img src="ad.jpg" id="adc" onclick="wo()"><button id="closeb" onclick="close1()">关闭</button>
 </div>
+	<a  href="http://www.import-tao.top/dazhan/ccc.html">贪吃蛇</a>
 </body>
 </html>
