--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
 <link rel="stylesheet" type="text/css" href="myblogcss.css">
-<div id="adud" ><img id="adudc" src="adud.jpg" ></div>
+<!--<div id="adud" ><img id="adudc" src="adud.jpg" ></div>
     <button id="close2" style="position: absolute;
     top: 0px;
     right: 500px;" onclick="close2()">关闭</button>
     <button style="position: absolute;
     top: 0px;
-    right: 500px;display:none" id="open2" onclick="open2()">打开</button><script type="text/javascript">
+    right: 500px;display:none" id="open2" onclick="open2()">打开</button> -->
+<script type="text/javascript">
     adDownUp();
     function adDownUp(argument) {
       setTimeout(adDown,1500);
@@ -64,8 +65,8 @@ setTimeout(adUp,2000);
   	<a id="z3" href="mailto:import_tao@163.com?cc=&bcc=import_tao@163.com&subject=主题&body=邮件内容">发送</a>
 	<a  href="http://www.import-tao.top/dazhan/ccc.html">贪吃蛇</a>
 </div>
-<div id="ad"><p class="ad">螳螂捕蝉，黄雀在后</p><img src="ad.jpg" id="adc" onclick="wo()"><button id="closeb" onclick="close1()">关闭</button>
-</div>
+<!-- <div id="ad"><p class="ad">螳螂捕蝉，黄雀在后</p><img src="ad.jpg" id="adc" onclick="wo()"><button id="closeb" onclick="close1()">关闭</button>
+</div> -->
 	
 </body>
 </html>
