--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ setTimeout(adUp,2000);
   	<a id="z3" href="mailto:import_tao@163.com?cc=&bcc=import_tao@163.com&subject=主题&body=邮件内容">发送</a>
 	<a  href="http://www.import-tao.top/dazhan/ccc.html">贪吃蛇</a>
 	<a  href="http://www.import-tao.top/jiaoben1765">中国象棋</a>
+	<a  href="http://www.import-tao.top/moban1735/">模版网站</a>
 </div>
 <!-- <div id="ad"><p class="ad">螳螂捕蝉，黄雀在后</p><img src="ad.jpg" id="adc" onclick="wo()"><button id="closeb" onclick="close1()">关闭</button>
 </div> -->
